Fixed svg auto-stretch

--- a/public/main.css
+++ b/public/main.css
@@ -49,7 +49,7 @@
 }
 
 
-html, body, #app {
+html, body, .app-container {
     width: 100%;
     height: 100%;
     margin: 0;
